<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProductKindFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:text="@string/productos"
        android:textSize="36sp" />

    <LinearLayout
        android:id="@+id/llFirstProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginLeft="7dp"
            android:text="@string/extra"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSecondProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginLeft="7dp"
            android:text="@string/corriente"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>